fix loading spinner being off center

--- a/ui/scss/component/_videojs.scss
+++ b/ui/scss/component/_videojs.scss
@@ -226,17 +226,13 @@ $control-bar-icon-size: 0.8rem;
   }
 }
 
-// larger than default spinner
-.vjs-loading-spinner {
-  margin: -49px 0 0 -37px;
-  border-radius: 100px;
-}
-
-// smallest screens get large spinner
+// larger than default spinner for all but smallest devices
 @media (min-width:680px) {
   .vjs-loading-spinner {
+    border-radius: 100px;
     height: 75px;
     width: 75px;
+    margin: -49px 0 0 -37px;
   }
 }
 
